# Chame_App

./: .gitignore  README.md  VSCODE_TASKS.md  kassensystem.db  privacy.html  uncommitted_changes.diff
backend/app/: MIGRATION_TESTING.md  README.md  alembic.ini  backup_cli.py  backup_example.py  backup_receiver.py  backup_scheduler.py  build_executeable.bat  config.py  pyproject.toml  pytest.ini  requirements.txt  run_migration_tests.py  test_admin_api_visibility.py  test_bank_accounting.py  test_database_path_recovery.py  test_default_admin_bootstrap.py  test_firebase_logging.py  test_migrations.py  test_migrations.sh  test_product_rounding.py  test_restore_dependencies.py  test_role_change.py  test_schema.py  test_simple_deletion.py  test_soft_delete.py
backend/app/alembic/: env.py
backend/app/backups/: chame_export_json_20250627_220936.json  chame_export_json_20250627_221127.json
backend/app/chame_app/: __main__.py  alembic_runtime.py  database.py  database_instance.py  main.py  simple_migrations.py
backend/app/docs/: API_TESTING.md  DATABASE_BACKUP.md  DELETION_MANAGEMENT_OVERVIEW.md  ENHANCED_SOFT_DELETE.md  FLEXIBLE_DELETION_SYSTEM.md  HARD_DELETE_GUIDE.md  HISTORICAL_DATA_PRESERVATION.md  README.md
backend/app/models/: bank_table.py  enhanced_soft_delete_mixin.py  ingredient.py  pfand_table.py  product_ingredient_table.py  product_table.py  product_toastround_table.py  sales_table.py  soft_delete_mixin.py  stock_history.py  toast_round.py  transaction_table.py  user_table.py
backend/app/scripts/: README.md  build_executeable.bat  (+1 more)
(+153 files in other folders)
